# tally-node

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  README-es.md  README-fr.md  README-ja.md  README-ko.md  README-zh-cn.md  README.md  changelog.json  claude_project.md  manage.sh  package-lock.json  package.json  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.old  sdkconfig.eora_s3_rx  sdkconfig.eora_s3_tx  sdkconfig.test
.claude/: settings.json
.moai/: manifest.json  status_line.sh
boards/: EoRa_S3.json
components/01_app/prod_tx_app/: CMakeLists.txt  prod_tx_app.cpp
components/01_app/prod_tx_app/include/: prod_tx_app.h
components/02_presentation/web_server/: .gitignore  CMakeLists.txt  README.md  web_server.cpp  web_server_cache.cpp  web_server_config.cpp  web_server_events.cpp  web_server_json.cpp  web_server_routes.cpp
components/02_presentation/web_server/handlers/: api_config.cpp  api_config.h  api_devices.cpp  api_devices.h  api_led.cpp  api_led.h  api_license.cpp  api_license.h  api_lora.cpp  api_lora.h  api_notices.cpp  api_notices.h  api_static.cpp  api_static.h  api_status.cpp  api_status.h  api_test.cpp  api_test.h
components/02_presentation/web_server/include/: web_server.h  web_server_cache.h  web_server_config.h  web_server_events.h  web_server_helpers.h  web_server_json.h  web_server_routes.h
components/05_hal/display_hal/: CMakeLists.txt  display_hal.c
components/05_hal/display_hal/include/: display_hal.h
components/05_hal/display_hal/u8g2_hal/: u8g2_esp32_hal.c
components/05_hal/display_hal/u8g2_hal/include/: u8g2_esp32_hal.h
components/05_hal/display_hal/u8g2_lib/csrc/: u8g2_fonts.c
components/display/: CMakeLists.txt  README_ICONS.md
components/display/icons/: README.md  icon_renderer.h  status_icons.c  status_icons.h
components/display/include/buffer/: DisplayBuffer.h
components/display/include/core/: DisplayHelper.h  DisplayManager.h  PageManager.h
components/display/include/pages/: BootScreen.h  RxPage.h  SettingsPage.h  TxPage.h
components/display/include/ui/: icons.h
components/display/src/buffer/: DisplayBuffer.c
components/display/src/core/: DisplayHelper.c  DisplayManager.cpp  PageManager.cpp
components/display/src/pages/: BootScreen.c  RxPage.cpp  SettingsPage.cpp  TxPage.cpp
components/display/src/ui/: icons.c
components/display/u8g2-hal-esp-idf/include/: u8g2_esp32_hal.h
components/info/: CMakeLists.txt
components/info/include/info/: InfoManager.hpp  info_manager.h  info_types.h  result.hpp
components/info/src/: DeviceIdManager.cpp  InfoManager.cpp  info_manager_c.cpp
components/info/test/: test_thread_safety.cpp
components/interface_web/: CMakeLists.txt  convert_web_resources.py
components/interface_web/include/: ApiHandler.h  WebServerCore.h
components/interface_web/src/: ApiHandler.cpp  MonitorApi.cpp  MonitorApi.h  WebServerCore.cpp  web_resources.c
components/interface_web/www/: app.js  index.html  style.css
components/lora/: CMakeLists.txt
components/lora/core/: CMakeLists.txt
components/lora/include/common/: LoRaTypes.h
components/lora/include/core/: LoRaCore.h
components/lora/include/manager/: LoRaManager.h
components/lora/include/protocol/: LoRaPacket.h
components/lora/include/realtime/: FastTallyMapper.h
components/lora/include/service/: TallyDispatcher.h
components/lora/src/core/: LoRaCore.cpp  lora_core_c.cpp
components/lora/src/manager/: LoRaManager.cpp
components/lora/src/protocol/: LoRaPacket.cpp
components/lora/src/realtime/: FastTallyMapper.cpp
components/lora/src/service/: TallyDispatcher.cpp
components/network/: CMakeLists.txt  README.md
components/network/core/: EthernetCore.cpp  EthernetCore.h  WiFiCore.cpp  WiFiCore.h
components/network/manager/: CMakeLists.txt  NetworkManager.cpp  NetworkManager.h
components/switcher/: CMakeLists.txt  README.md  library.json
components/switcher/common/: Makefile
components/switcher/common/include/: sw_platform.h
components/switcher/common/platform/: sw_platform_esp.c  sw_platform_linux.c
components/switcher/handler/: Makefile
components/switcher/handler/include/: switcher.h
components/switcher/handler/src/: switcher.c  switcher.c.bak  switcher_dispatch.h  switcher_dispatch_README.md
components/switcher/include/: switcher_config.h
components/switcher/manager/: CMakeLists.txt
components/switcher/manager/include/: SwitcherManager.h
components/switcher/manager/src/: SwitcherManager.cpp
components/switcher/protocol/atem/: Makefile  README.md
components/switcher/protocol/atem/include/: atem_buffer.h  atem_client.h  atem_debug.h  atem_parser.h  atem_protocol.h  atem_state.h
components/switcher/protocol/atem/src/: atem_client.c  atem_debug.c  atem_parser.c
components/switcher/protocol/obs/: Makefile  README.md
components/switcher/protocol/obs/include/: obs_client.h  obs_protocol.h  obs_state.h
components/switcher/protocol/obs/src/: obs_base64.c  obs_base64.h  obs_client.c  obs_json.c  obs_json.h  obs_sha256.c  obs_sha256.h  obs_websocket.c  obs_websocket.h
components/switcher/protocol/vmix/: Makefile  README.md
components/switcher/protocol/vmix/include/: vmix_client.h  vmix_protocol.h  vmix_state.h
components/switcher/protocol/vmix/src/: vmix_client.c
components/system/: CMakeLists.txt
components/system/button_poll/core/include/: button_actions.h  button_poll.h
components/system/button_poll/core/src/: button_actions.c  button_poll.c
components/system/common/: CommonUtils.h  PinConfig.h  switcher_types.h  utils.h
components/system/config/: ConfigCore.cpp  ConfigCore.h
components/system/monitor/: CMakeLists.txt  DeviceIdManager.cpp  SystemMonitor.cpp  SystemMonitor.h  system_monitor_c.cpp
components/system/monitor/include/: DeviceIdManager.h  system_monitor_c.h
docs/: ARCHITECTURE.md  ATEM_ZOMBIE_CONNECTION_FIX.md  BATTERY_SYSTEM.md  CODE_REVIEW.md  COMPONENT_STRUCTURE.md  DDD_IMPLEMENTATION_REPORT.md  DDD_REPORT_SPEC-LICENSE-HTTPS-001.md  DEVICE_MGMT_SERVICE.md  DISPLAY_STATUS.md  InfoManager_API.md  LICENSE_PLAN.md  (+21 more)
(+597 files in other folders)
